--- a/popup.css
+++ b/popup.css
@@ -1,8 +1,12 @@
 .category {
     margin: 10px 0;
-    padding:5px 10px 0 ;
+    padding: 5px 10px 0;
     background-color: #3c3f41;
     color: #fff;
     cursor: pointer;
     word-wrap: break-word;
+    width: 300px;
+    min-height: 48px;
+    vertical-align: middle;
+    line-height: 35px;
 }
