--- a/popup.css
+++ b/popup.css
@@ -1,12 +1,31 @@
 .category {
     margin: 10px 0;
     padding: 5px 10px 0;
-    background-color: #3c3f41;
-    color: #fff;
+    background-color: #e1e1e1;
+    color: #666;
     cursor: pointer;
     word-wrap: break-word;
     width: 300px;
     min-height: 48px;
     vertical-align: middle;
     line-height: 35px;
+    transition: all .4s ease;
 }
+
+.category:hover{
+    box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6);
+    background: #2098D1;
+    color: white;
+}
+
+.slide-fade-enter-active {
+    transition: all .3s ease;
+  }
+  .slide-fade-leave-active {
+    transition: all 0s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+  }
+  .slide-fade-enter, .slide-fade-leave-to
+  /* .slide-fade-leave-active below version 2.1.8 */ {
+    transform: translateX(60px);
+    opacity: 0;
+  }
